skeleton-08/montapi-k8/montapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: montapi-service
  namespace: monitoring
spec:
  selector:
    app: montapi
  ports:
  - port: 3001
    targetPort: 80
