skeleton-08/montapi-k8/montapi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monapi-ingress
spec:
  backend:
    serviceName: montapi-service
    servicePort: 80
